src/rules/isort/snapshots/ruff__rules__isort__tests__order_relative_imports_by_level.py.snap
---
source: src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    content: "from ..a import a\nfrom ..b import a\nfrom .a import a\nfrom .b import a\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~

